--- a/frontend-2.1.3/src/assets/i18n/en.json
+++ b/frontend-2.1.3/src/assets/i18n/en.json
@@ -37,6 +37,9 @@
   "VALIDATION": "Validation",
   "UPLOAD": "Upload",
   "TREE": "Tree",
+  "profile.configNotification":"Config notification",
+  "HELLO":"Config notification",
+
 
   "TABLES": "Tables",
   "FULLSCREEN": "Fullscreen",
