--- a/frontend-2.1.3/src/assets/i18n/vi.json
+++ b/frontend-2.1.3/src/assets/i18n/vi.json
@@ -21,7 +21,7 @@
   "DATEPICKER": "cueilleur",
   "EXPANSION": "Expansion",
   "RADIO": "Radio",
-  "TOOLBAR": "Barre d'outils",    
+  "TOOLBAR": "Barre d'outils",
   "LISTS": "Listes",
   "GRID": "La grille",
   "PROGRESS": "La progression",
@@ -32,7 +32,7 @@
   "SLIDER": "Curseur",
   "SNACKBAR": "Snackbar",
   "DIALOG": "Dialog",
-  
+
   "FORMS": "Formes",
   "EDITOR": "Editeur",
   "VALIDATION": "Validation",
@@ -54,7 +54,7 @@
   "DETAIL": "vue détaillée",
 
   "TASKBOARD": "Taskboard",
-  
+
   "CHARTS": "Graphiques",
 
   "MAPS": "Cartes",
@@ -77,9 +77,9 @@
   "FORGOT": "Forgot",
   "LOCKSCREEN": "Lockscreen",
   "ERROR": "Error",
-  
+
   "DOCS": "Docs",
-  
+
   "SETTING": "Cài đặt",
   "AGENT": "Agent",
   "QUEUE": "Queue",
@@ -99,7 +99,7 @@
   "ADD_TITLE":"Thêm mới",
   "IMPORT_LIST":"Import danh sách",
   "FILTER": "Bộ lọc",
-  
+
   "CONTACT": "Khách hàng",
   "NAME": "Họ và tên",
   "JOB_TITLE":"Chức vụ",
@@ -146,5 +146,15 @@
   "LAST_UNLOCK_TIME": "Thời điểm mở",
   "LAST_LOCK_ACTOR": "Người chặn",
   "LAST_UNLOCK_ACTOR": "Người mở",
-  "DESCRIPTION": "Mô tả"
+  "DESCRIPTION": "Mô tả",
+  "profile.edit": "Profile",
+  "profile.changePass": "Password",
+  "profile.configNotification": "Notification config",
+  "profile.emailSettings": "Mail settings",
+  "Blacklist": "Danh sách đen",
+  "ADMIN": "Quản trị người dùng",
+  "department.index": "Đơn vị",
+  "user.index": "Người dùng",
+  "manage.profile": "Thông tin cá nhân"
+
 }
