--- a/frontend-2.1.3/src/assets/i18n/vi.json
+++ b/frontend-2.1.3/src/assets/i18n/vi.json
@@ -1,5 +1,9 @@
 {
+
+  "validate.minLength":"Trường quá dài tối thiểu {{length}} ký tự",
+  "validate.maxLength":"Trường quá dài tối đa {{length}} ký tự",
   "HOME": "Tableau de bord",
+  "login.button.login":"Login",
 
   "APPS": "Apps",
   "CALENDAR": "Calendrier",
